# goldplate

./: CHANGELOG.md  Main.hs  README.md  goldplate.cabal  stack.yaml
.github/workflows/: binaries.yml  haskell-ci.yml  main.yml
src/: Goldplate.hs  Main.hs
src/Data/Aeson/: Extended.hs
src/Text/: Splice.hs
src/Text/Regex/PCRE/: Simple.hs
tests/: Tests.hs  builtin.goldplate  builtin.stdout  cat.goldplate  create.goldplate  echo.goldplate  env.goldplate  escaping.goldplate  escaping.stdout  exit.goldplate  glob-1.stdout  glob-2.txt  glob.goldplate  prettify-json.goldplate  replace-nomatch.goldplate  replace.goldplate  replace.stdout  stdin.goldplate  stdin.stdout  work-dir.goldplate  work-dir.stdout
