Name:          goldplate
Version:       0.2.1.1
Synopsis:      A lightweight golden test runner
License:       Apache-2.0
License-file:  LICENSE
Author:        Jasper Van der Jeugt <jasper@fugue.co>
Maintainer:    Jasper Van der Jeugt <jasper@fugue.co>, Andreas Abel
Copyright:     2019-2021 Fugue, Inc
Homepage:      https://github.com/fugue/goldplate
Bug-reports:   https://github.com/fugue/goldplate/issues
Category:      Language
Build-type:    Simple
Cabal-version: 1.18
Description:   Language-agnostic golden test runner for command-line applications.

Tested-with:
  GHC == 9.6.0
  GHC == 9.4.4
  GHC == 9.2.6
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4

Extra-source-files:
  CHANGELOG.md
  README.md

Source-repository head
  type:     git
  location: git://github.com/fugue/goldplate.git

Source-repository this
  type:     git
  location: git://github.com/fugue/goldplate.git
  tag:      v0.2.1.1

Executable goldplate
  Hs-source-dirs:    src
  Main-is:           Main.hs
  Default-language:  Haskell2010
  Ghc-options:       -Wall -rtsopts -threaded

  Other-modules:
    Text.Regex.PCRE.Simple
    Text.Splice
    Paths_goldplate

  Build-depends:
    aeson                >= 1.4  && < 2.2,
    aeson-pretty         >= 0.8  && < 0.9,
    async                >= 2.2  && < 2.3,
    base                 >= 4.11 && < 5,
    bytestring           >= 0.10 && < 0.12,
    Diff                 >= 0.3  && < 0.5,
    directory            >= 1.3  && < 1.4,
    filepath             >= 1.4  && < 1.5,
    Glob                 >= 0.10 && < 0.11,
    optparse-applicative >= 0.14 && < 0.18,
    process              >= 1.6  && < 1.7,
    regex-pcre-builtin   >= 0.95.1.3 && < 0.96,
    text                 >= 1.2  && < 2.1,
    unordered-containers >= 0.2  && < 0.3

Test-suite tests
  Default-language:   Haskell2010
  Type:               exitcode-stdio-1.0
  Ghc-options:        -threaded
  Main-is:            Tests.hs
  Build-depends:      base, process
  Build-tool-depends: goldplate:goldplate
  Hs-source-dirs:     tests
